# salmagundi

./: .clang-format  .gitignore  build.sh  meson.build  readme.md  test.sh
include/: salmagundi.h
src/: salmagundi.c
tests/: fuzz-salmagundi.c  test-salmagundi.c
tools/: buildall.sh  install-deps.sh  testall.sh
